// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/WarnMetricAckModal error display 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Warning"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="The number of active users is greater than the supported limit. Please acknowledge the issue by clicking below."
        id="warn_metric_ack_modal.description"
        values={Object {}}
      />
      <br />
      <div
        className="form-group has-error"
      >
        <br />
        <label
          className="control-label"
        >
          <FormattedMessage
            defaultMessage="We were unable to send acknowledgement. Please {link} to acknowledge the warning!"
            id="warn_metric_ack_modal.mailto.message"
            values={
              Object {
                "link": <WarnMetricAckErrorLink
                  defaultMessage="Email Us"
                  messageId="warn_metric_ack_modal.mailto.link"
                  onClickHandler={[Function]}
                  url="mailto:acknowledge@mattermost.com?cc=a@test.com&subject=Acknowledgement%20of%20User%20Limit&body=This%20is%20a%20receipt%20of%20acknowledgement%20for%20the%20number%20of%20active%20users%20exceeding%20the%20limit%20for%20the%20following%20site.%0D%0AContact%20Email%20a%40test.com%0D%0ASite%20URL%20http%3A%2F%2Flocalhost%3A8065%0D%0AIf%20you%20have%20any%20additional%20inquiries%2C%20please%20contact%20support%40mattermost.com"
                  warnMetricId="metric1"
                />,
              }
            }
          />
        </label>
      </div>
      <br />
      <div
        className="help__format-text"
        style={
          Object {
            "opacity": "0.45",
          }
        }
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Acknowledgement will be sent to Mattermost, Inc."
          id="warn_metric_ack_modal.mailto.body.sub_text"
        />
      </div>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-link cancel-button"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="warn_metric_ack_modal.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-primary save-button"
      data-dismiss="modal"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Acknowledge"
        id="warn_metric_ack_modal.acknowledge"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/WarnMetricAckModal should match snapshot, init 1`] = `
<Modal
  animation={true}
  aria-labelledby="warnMetricAckHeaderModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={false}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="warnMetricAckHeaderModalLabel"
    >
      <FormattedMessage
        defaultMessage="Warning"
        id="warn_metric_ack_modal.header.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <FormattedMessage
        defaultMessage="The number of active users is greater than the supported limit. Please acknowledge the issue by clicking below."
        id="warn_metric_ack_modal.description"
        values={Object {}}
      />
      <br />
      <br />
      <div
        className="help__format-text"
        style={
          Object {
            "opacity": "0.45",
          }
        }
      >
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Acknowledgement will be sent to Mattermost, Inc."
          id="warn_metric_ack_modal.mailto.body.sub_text"
        />
      </div>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-link cancel-button"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="warn_metric_ack_modal.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-primary save-button"
      data-dismiss="modal"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Acknowledge"
        id="warn_metric_ack_modal.acknowledge"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;
